<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的营养街</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="username">账号:</string>
    <string name="userpass">密码</string>
    <string name="checkuserpass">确认密码</string>
    <string name="sex">性别:</string>
    <string name="age">年龄:</string>
    <string name="job">职业:</string>
    <string name="weight">体重:</string>
    <string name="ok">确定</string>
    <string name="reset">重置</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="daily_recommend">今日推荐</string>
    <string name="collocation_self">自己配</string>
    <string name="breakfast">早餐</string>
    <string name="chinese_food">中餐</string>
    <string name="dinner">晚餐</string>
    <string name="idle_hours">闲时</string>
    <string name="daily_question">每日一问</string>
    <string name="good_food_circle">美食圈</string>
    <string name="mine">我的信息</string>
    <string name="setting">设置</string>
    <string name="upload">上传</string>
    <string name="material">食材</string>
    <string name="finish">完成</string>
    <string name="foodname">食物名称:</string>
    <string name="materialname">食材名称:</string>
    <string name="materialweight">食材重量:</string>
    <string name="nutrifunc">营养功效:</string>
    <string name="suitablecrowds">适宜人群:</string>
    <string name="foodmaterial">食材（单位：克）</string>
    <string name="step">制作步骤:</string>
    <string-array name="nutri_spinner">
        <item>健肾</item>
        <item>益智</item>
        <item>清凉解暑</item>
        <item>排毒养颜</item>
        <item>清热美白</item>
        <item>抗癌</item>
    </string-array>
    <string name="tip">点击选择内容</string>
    <string-array name="suitablecrows_spinner">
        <item>一般人群均可用</item>
        <item>小孩</item>
        <item>青少年</item>
        <item>妇女</item>
        <item>男人</item>
        <item>老人</item>
        <item>糖尿病人</item>
        <item>高血压人</item>
    </string-array>
    <string name="camera">拍照</string>
    <string name="photos">从相册获取</string>
    <string name="exit">取消</string>
    <string name="right">说得对</string>
    <string name="error">说错了</string>
    <string name="update">修改</string>
    <string name="suggest_feedback">意见反馈</string>
    <string name="update_version">更新版本</string>
    <string name="about_us">关于我们</string>
    <string name="quit">退出</string>
    <string name="send">发送</string>
    <string name="publish">发布</string>
    <string name="foodname_input">美食名</string>
    <string name="foodintroduce">美食简介</string>

</resources>
