<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/settingBack"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="left|center"
            android:background="@drawable/backbutton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/settingLine"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <RelativeLayout
        android:id="@+id/rela_suggest_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blackline_palegoldernrodboder" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/suggest_feedback"
            android:textColor="@color/gray"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/right_arrows" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rela_update_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blackline_palegoldernrodboder" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/update_version"
            android:textColor="@color/gray"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/right_arrows" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rela_about_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blackline_palegoldernrodboder" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/about_us"
            android:textColor="@color/gray"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/right_arrows" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rela_quit_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blackline_palegoldernrodboder" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/quit"
            android:textColor="@color/gray"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/right_arrows" />
    </RelativeLayout>

</LinearLayout>