<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/myInfoBack"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="left|center"
            android:background="@drawable/backbutton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mine"
            android:textSize="20sp" />

        <Button
            android:id="@+id/myInfoUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/update"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/uploadingLine"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/myInfoImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/username"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/myInfoUserName"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/myInfoSex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/age"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/myInfoAge"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/job"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/myInfoJob"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weight"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/myInfoWeight"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>