<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/relative_uploading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/uploadingBack"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="left|center"
            android:background="@drawable/backbutton" />

        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/upload"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/uploadingLine"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/relative_uploading"
        android:background="#000000" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadingLine"
        android:layout_marginTop="6sp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageUploading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:background="@drawable/icon_addpic"
                    android:maxHeight="110dip"
                    android:maxWidth="110dip" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/foodname"
                    android:textColor="@color/olive"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/foodNameTxt"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrifunc"
                    android:textColor="@color/olive"
                    android:textSize="22sp" />

                <Spinner
                    android:id="@+id/nutriFunctionSpi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/nutri_spinner"
                    android:prompt="@string/tip"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suitablecrowds"
                    android:textColor="@color/olive"
                    android:textSize="22sp" />

                <Spinner
                    android:id="@+id/suitableCrowsSpi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/suitablecrows_spinner"
                    android:prompt="@string/tip"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodmaterial"
                    android:textColor="@color/olive"
                    android:textSize="22sp" />

                <GridView
                    android:id="@+id/materiaGridView"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="#EFDFDF"
                    android:gravity="center"
                    android:horizontalSpacing="5dp"
                    android:numColumns="2" >
                </GridView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step"
                    android:textColor="@color/olive"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/stepsEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:singleLine="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>