<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 上边主页面 -->

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

    <!-- 底部菜单页面 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/breakfast_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/breakfast_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/breakfast"
                    android:textColor="#FF7597B3"
                    android:textSize="24sp"
                    android:background="@null" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chinesefood_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/chinesefood_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/chinese_food"
                    android:textColor="#FF7597B3"
                    android:textSize="24sp"
                    android:background="@null" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dinner_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/dinner_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/dinner"
                    android:textColor="#FF7597B3"
                    android:textSize="24sp"
                    android:background="@null">
                </TextView>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
			android:id="@+id/idlehour_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/idlehour_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/idle_hours"
                    android:textColor="#FF7597B3"
                    android:textSize="24sp"
                    android:background="@null" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>